# nms-save-vault

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  RELEASING.md  pyproject.toml
.agent/rules/: consolidated.md
installer/: README-INSTALL.txt  install.bat  uninstall.bat
packaging/: build_exe.ps1  make_installer_zip.ps1  nmsvault_gui.py
src/nms_save_vault/: __init__.py  cli.py  gui.py
src/nms_save_vault/core/: __init__.py  catalog.py  discover.py  formats.py  locations.py  lz4_block.py  meta.py  msstore.py  operations.py  safety.py  savedir.py  slotmap.py  state.py
tests/: conftest.py  test_discover.py  test_meta.py  test_msstore.py  test_operations.py  test_operations_xbox.py  test_slotmap.py  test_state.py
