[project]
name = "nms-save-vault"
version = "0.0.2"
description = "Safe backup, catalog, and slot management for No Man's Sky (PC/Steam) save files."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
# Core is intentionally standard-library only (no compression dep needed: the app
# copies save data verbatim and only decrypts/re-encrypts the small meta files).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
build = ["pyinstaller>=6"]

[project.scripts]
nmsvault = "nms_save_vault.cli:main"
nmsvault-gui = "nms_save_vault.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nms_save_vault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
